Last update fixed the flex gap, gap is not available on all devices yet, so added margin to that. replaced details tag with only summary

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,10 @@ p {
     margin-right: 2px;
 }
 
+figure{
+    margin: 0px
+}
+
 .searchContainer {
     width: 30vw;
     display: flex;
@@ -80,6 +84,11 @@ button.active{
 }
 
 
+#description{
+    text-transform: capitalize;
+    margin: 10px 0;
+}
+
 
 .nav-btns > button >a{
     color: rgb(17, 17, 17);
@@ -94,6 +103,7 @@ button.active{
     background-color: rgb(0, 195, 255);
     border: 0px;
     border-radius: 5px;
+    margin: 0px 5px;
 }
 
 .summaryConatiner{
@@ -215,6 +225,16 @@ button.active{
 
 @media (max-width: 576px) {
 
+    h1, h2, h3, h4, h5, h6 {
+        margin: 0;
+        font-size: 0.8rem;
+        font-family: 'poppins', Georgia, 'Times New Roman', Times, serif
+    }
+
+    #weatherLocation{
+        font-size: 1rem;
+    }
+
     .searchContainer {
         width: 100vw;
         display: flex;
@@ -233,13 +253,6 @@ button.active{
     .weather-details {
         height: 20%;
         font-size: 0.65rem;
-    }
-
-    .nav-btns {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        margin: 5vh 5px 5vh 5px !important;
     }
     
 }
